--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <body>
     <h1 id="title"><b>DOM MANIPULATION WITH FORMS</b></h1>
     <p id="description">
-      This is a form and table created using HTML,CSS,BOOTSTRAP AND DOM. <br />
-      the form will contain the imformation of a user and the table will store
+      This is a form and table created using HTML,CSS,BOOTSTRAP and DOM. <br />
+      The form will contain the information of a user and the table will store
       the information received from the users
     </p>
     <div class="form-group">
