--- a/index.html
+++ b/index.html
@@ -151,22 +151,26 @@
         <!-- <input type="button" id="Submit" value="Submit" onclick={validate()}><br> -->
       </form>
       <br />
+      <div class="table-content">
+        <table class="table" id="tab">
+          <thead class="table">
+            <tr>
+              <th scope="col">First name</th>
+              <th scope="col">Last Name</th>
+              <th scope="col">Address</th>
+              <th scope="col">Pincode</th>
+              <th scope="col">Gender</th>
+              <th scope="col">Choice of food</th>
+              <th scope="col">State</th>
+              <th scope="col">Country</th>
+            </tr>
+          </thead>
+          <tbody class="table"></tbody>
+        </table>
 
-      <table class="table" id="tab">
-        <thead>
-          <tr>
-            <th scope="col">First name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Address</th>
-            <th scope="col">Pincode</th>
-            <th scope="col">Gender</th>
-            <th scope="col">Choice of food</th>
-            <th scope="col">State</th>
-            <th scope="col">Country</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+      </div>
+
+      
     </div>
     <script src="script.js"></script>
     <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
